--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\2303727\eclipse-workspace\Identify_New_Bikes\testng.xml</span>
+                    <span>C:\Users\VISHNU KOSANA\eclipse-workspace\Identify_New_Bikes\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,21 +102,6 @@
                       <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
                     <div class="method-list-content passed suite-Suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.IdentifyNewBikes.testRunner.testRun" class="method navigator-link" hash-for-method="runScenario(&quot;Navigating to the Upcoming Honda Bike tab&quot;, &quot;Identify New Bikes&quot;)">runScenario("Navigating to the Upcoming Honda Bike tab", "Identify New Bikes")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.IdentifyNewBikes.testRunner.testRun" class="method navigator-link" hash-for-method="runScenario(&quot;Login functionality&quot;, &quot;Identify New Bikes&quot;)">runScenario("Login functionality", "Identify New Bikes")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.IdentifyNewBikes.testRunner.testRun" class="method navigator-link" hash-for-method="runScenario(&quot;Navigating to the Used Cars for Sale tab&quot;, &quot;Identify New Bikes&quot;)">runScenario("Navigating to the Used Cars for Sale tab", "Identify New Bikes")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="com.IdentifyNewBikes.testRunner.testRun" class="method navigator-link" hash-for-method="runScenario(&quot;Home page functionality&quot;, &quot;Identify New Bikes&quot;)">runScenario("Home page functionality", "Identify New Bikes")</a> <!-- method navigator-link -->
@@ -142,36 +127,6 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Navigating to the Upcoming Honda Bike tab&quot;, &quot;Identify New Bikes&quot;)">
-                  </a> <!-- runScenario("Navigating to the Upcoming Honda Bike tab", "Identify New Bikes") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Navigating to the Upcoming Honda Bike tab", "Identify New Bikes")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Login functionality&quot;, &quot;Identify New Bikes&quot;)">
-                  </a> <!-- runScenario("Login functionality", "Identify New Bikes") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Login functionality", "Identify New Bikes")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Navigating to the Used Cars for Sale tab&quot;, &quot;Identify New Bikes&quot;)">
-                  </a> <!-- runScenario("Navigating to the Used Cars for Sale tab", "Identify New Bikes") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Navigating to the Used Cars for Sale tab", "Identify New Bikes")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="runScenario(&quot;Home page functionality&quot;, &quot;Identify New Bikes&quot;)">
                   </a> <!-- runScenario("Home page functionality", "Identify New Bikes") -->
                   <span class="method-name">runScenario</span>
@@ -185,7 +140,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\2303727\eclipse-workspace\Identify_New_Bikes\testng.xml</span>
+            <span class="header-content">C:\Users\VISHNU KOSANA\eclipse-workspace\Identify_New_Bikes\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -242,23 +197,11 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'com.IdentifyNewBikes.testRunner.testRun')
-data.setCell(0, 3, 441386);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'com.IdentifyNewBikes.testRunner.testRun')
-data.setCell(1, 3, 16004);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'runScenario')
-data.setCell(2, 2, 'com.IdentifyNewBikes.testRunner.testRun')
-data.setCell(2, 3, 10284);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'runScenario')
-data.setCell(3, 2, 'com.IdentifyNewBikes.testRunner.testRun')
-data.setCell(3, 3, 4937);
+data.setCell(0, 3, 449566);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -291,28 +234,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.IdentifyNewBikes.testRunner.testRun</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@5381deec)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@78f28dbb)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("Home page functionality", "Identify New Bikes")</span>
-                <span class="method-start">14797 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("Navigating to the Upcoming Honda Bike tab", "Identify New Bikes")</span>
-                <span class="method-start">19739 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("Navigating to the Used Cars for Sale tab", "Identify New Bikes")</span>
-                <span class="method-start">35747 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("Login functionality", "Identify New Bikes")</span>
-                <span class="method-start">477135 ms</span>
+                <span class="method-start">9164 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">487423 ms</span>
+                <span class="method-start">458744 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
