--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\VISHNU KOSANA\eclipse-workspace\Identify_New_Bikes\testng.xml</span>
+                    <span>C:\Users\2303727\eclipse-workspace\Identify_New_Bikes\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -140,7 +140,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\VISHNU KOSANA\eclipse-workspace\Identify_New_Bikes\testng.xml</span>
+            <span class="header-content">C:\Users\2303727\eclipse-workspace\Identify_New_Bikes\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -201,12 +201,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'com.IdentifyNewBikes.testRunner.testRun')
-data.setCell(0, 3, 449566);
+data.setCell(0, 3, 411775);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 minutes</span>
+              <span class="suite-total-time">Total running time: 6 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -234,16 +234,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.IdentifyNewBikes.testRunner.testRun</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@78f28dbb)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@3b310465)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("Home page functionality", "Identify New Bikes")</span>
-                <span class="method-start">9164 ms</span>
+                <span class="method-start">15363 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">458744 ms</span>
+                <span class="method-start">427148 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
