--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b36d9e">  <td>24/02/20 17:16:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@563f38c4]">runScenario</td> 
-  <td>main@26540753</td>   <td></td> </tr>
-<tr bgcolor="b36d9e">  <td>24/02/20 17:16:28</td>   <td>-15352</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@563f38c4]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26540753</td>   <td></td> </tr>
-<tr bgcolor="b36d9e">  <td>24/02/20 17:23:35</td>   <td>411785</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@563f38c4]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26540753</td>   <td></td> </tr>
+<tr bgcolor="c8eb65">  <td>24/02/20 22:04:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@1530c739]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1464191502</td>   <td></td> </tr>
+<tr bgcolor="c8eb65">  <td>24/02/20 21:57:35</td>   <td>-444061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@1530c739]">runScenario</td> 
+  <td>main@1464191502</td>   <td></td> </tr>
+<tr bgcolor="c8eb65">  <td>24/02/20 21:57:28</td>   <td>-450247</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@1530c739]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1464191502</td>   <td></td> </tr>
 </table>
